# gemini-hackathon-ortrace

./: README.md
backend/: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  README.md
backend/.cargo/: config.toml
backend/src/: config.rs  error.rs  main.rs  router.rs  state.rs
backend/src/controllers/: auth.rs  chat.rs  health.rs  mod.rs  project.rs  ticket.rs  widget.rs
backend/src/dto/: auth.rs  chat.rs  common.rs  mod.rs  project.rs  ticket.rs  widget.rs
backend/src/middleware/: auth.rs  mod.rs
backend/src/models/: job.rs  mod.rs  project.rs  report.rs  ticket.rs  user.rs
backend/src/services/: auth_service.rs  chat_service.rs  gemini_service.rs  mod.rs  project_service.rs  queue_service.rs  storage_service.rs  ticket_service.rs  worker.rs
backend/tests/: health_check.rs  integration_helpers.rs
frontend/: .env.example  README.md  index.html  package-lock.json  package.json  tailwind.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: AnalysisQuestionsEditor.tsx  FeedbackWidget.tsx  ProtectedRoute.tsx  RedirectToApp.tsx
frontend/src/components/landing/: CTASection.tsx  CountUpNumber.tsx  HeroSection.tsx  (+3 more)
frontend/src/contexts/: AuthContext.tsx
frontend/src/hooks/: useCountUp.tsx  useScreenRecorder.ts
frontend/src/lib/: analysisQuestions.ts  api.ts  domain.ts
frontend/src/pages/: Analytics.tsx  Auth.tsx  AuthCallback.tsx  Dummy.tsx  Integrations.tsx  Landing.tsx  Onboarding.tsx  Overview.tsx  Privacy.tsx  ProjectSetup.tsx  Terms.tsx  TicketDetail.tsx  Tickets.tsx  User.tsx
frontend/src/types/: session.ts
(+4 files in other folders)
